--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Card from '../components/Card.astro';
 	<main>
 		<h1><span class="text-gradient">Mount Stromlo Student Seminars 2023</span></h1>
 		<p class="instructions">
-			Initial deployment of the MSSS2023 website. <strong>UNDER CONSTRUCTION!!!<\strong>
+			Initial deployment of the MSSS2023 website. <strong>UNDER CONSTRUCTION!!!</strong>
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
