--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,7 +107,7 @@ import Card from '../components/Card.astro';
 	the same style command-->    
 	<body style="background-color:rgb(0, 0, 0)"></body>
 	<h1> Welcome To The Mount Stromlo Student Seminars 2023!</h1> 
-	<section id="Menu" style align="center">
+	<section id="Menu">
 	<a href="#info" class ='button'><img src="description_button.png" width="75"></a>
 	<a href="#keydates" class ='button'><img src="button.png" width="100"></a>
 	<a href="#registration" class ='button'><img src="button.png" width="100"></a>
