--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,6 +119,7 @@ import Card from '../components/Card.astro';
 </style>
 
 <html>
+<main>
     <!-- how to set the background colour, for individual elements, use
     the same style command-->
     <body style="background-color:rgb(0, 0, 0)"></body>
@@ -156,4 +157,6 @@ import Card from '../components/Card.astro';
             <h2><font color="#D7A5FD">Participants</font></h2>
             <p><font color="#D7A5FD">Participant list and organisation</font></p>
         </section>
+    </section>
+</main>
 </html>
