--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,7 +85,7 @@ import Card from '../components/Card.astro';
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-size: 400%;
-        background-position: 0%;
+        background-position: 0;
     }
 
     .instructions {
@@ -138,24 +138,24 @@ import Card from '../components/Card.astro';
     <section id="logo">
         <img src="airglow.jpeg" alt="MSSS2023 Logo">
         <section id='info'>
-            <h2 style="text-align:center"><font color="#FDDDA5">Information</font></h2>
-            <p><font color="#FDDDA5">Some writing about general information about the seminars.</font></p>
+            <h2 style="text-align:center"><span style="color: #FDDDA5; ">Information</span></h2>
+            <p><span style="color: #FDDDA5; ">Some writing about general information about the seminars.</span></p>
         </section>
         <section id='keydates'>
-            <h2><font color="#AAFDA5">Key Dates</font></h2>
-            <p><font color="#AAFDA5">Any key dates.</font></p>
+            <h2><span style="color: #AAFDA5; ">Key Dates</span></h2>
+            <p><span style="color: #AAFDA5; ">Any key dates.</span></p>
         </section>
         <section id='registration'>
-            <h2><font color="#A5FDF7">Registration</font></h2>
-            <p><font color="#A5FDF7">Link and info about registering.</font></p>
+            <h2><span style="color: #A5FDF7; ">Registration</span></h2>
+            <p><span style="color: #A5FDF7; ">Link and info about registering.</span></p>
         </section>
         <section id='program'>
-            <h2><font color="#A5ADFD">Program</font></h2>
-            <p><font color="#A5ADFD">The program.</font></p>
+            <h2><span style="color: #A5ADFD; ">Program</span></h2>
+            <p><span style="color: #A5ADFD; ">The program.</span></p>
         </section>
         <section id='participants'>
-            <h2><font color="#D7A5FD">Participants</font></h2>
-            <p><font color="#D7A5FD">Participant list and organisation</font></p>
+            <h2><span style="color: #D7A5FD; ">Participants</span></h2>
+            <p><span style="color: #D7A5FD; ">Participant list and organisation</span></p>
         </section>
     </section>
 </main>
