--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="MSSS2023">
     <main>
         <h1><span class="text-gradient">Mount Stromlo Student Seminars 2023</span></h1>
         <p class="instructions">
@@ -125,18 +125,18 @@ import Card from '../components/Card.astro';
     <body style="background-color:rgb(0, 0, 0)"></body>
     <h1> Welcome To The Mount Stromlo Student Seminars 2023!</h1>
     <section id="Menu">
-        <a href="#info" class='button'><img src="description_button.png" width="75"></a>
-        <a href="#keydates" class='button'><img src="button.png" width="100"></a>
-        <a href="#registration" class='button'><img src="button.png" width="100"></a>
-        <a href="#program" class='button'><img src="button.png" width="100"></a>
-        <a href="#participants" class='button'><img src="button.png" width="100"></a>
+        <a href="#info" class='button'><img src="../../public/description_button.png" width="75", alt="images"></a>
+        <a href="#keydates" class='button'><img src="../../public/button.png" width="100", alt="images"></a>
+        <a href="#registration" class='button'><img src="../../public/button.png" width="100", alt="images"></a>
+        <a href="#program" class='button'><img src="../../public/button.png" width="100", alt="images"></a>
+        <a href="#participants" class='button'><img src="../../public/button.png" width="100", alt="images"></a>
     </section>
     <div>
         <br>
         </br>
     </div>
     <section id="logo">
-        <img src="airglow.jpeg" alt="MSSS2023 Logo">
+        <img src="../../public/airglow.jpeg" alt="MSSS2023 Logo">
         <section id='info'>
             <h2 style="text-align:center"><span style="color: #FDDDA5; ">Information</span></h2>
             <p><span style="color: #FDDDA5; ">Some writing about general information about the seminars.</span></p>
