--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,18 +10,18 @@ import Card from '../components/Card.astro';
         <body style="background-color:rgb(0, 0, 0)"></body>
         <h1><span class="text-gradient">Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
-            <a href="#info" class='button'><img src="/msss2023/description_button.png" width="75" , alt="images"></a>
-            <a href="#keydates" class='button'><img src="/msss2023/description_button.png" width="100" , alt="images"></a>
-            <a href="#registration" class='button'><img src="//msss2023description_button.png" width="100" , alt="images"></a>
-            <a href="#program" class='button'><img src="/msss2023/description_button.png" width="100" , alt="images"></a>
-            <a href="#participants" class='button'><img src="/msss2023/description_button.png" width="100" , alt="images"></a>
+            <a href="#info" class='button'><img src="/msss2023/description_button.png" width="75" alt="images"></a>
+            <a href="#keydates" class='button'><img src="/msss2023/description_button.png" width="100" alt="images"></a>
+            <a href="#registration" class='button'><img src="/msss2023/description_button.png" width="100" alt="images"></a>
+            <a href="#program" class='button'><img src="/msss2023/description_button.png" width="100" alt="images"></a>
+            <a href="#participants" class='button'><img src="/msss2023/description_button.png" width="100" alt="images"></a>
         </section>
         <div>
             <br>
             </br>
         </div>
         <section id="logo">
-            <img src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=500>
+            <img src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=vw>
             <section id='info'>
                 <h2 style="text-align:center"><span style="color: #FDDDA5; ">Information</span></h2>
                 <p><span style="color: #FDDDA5; ">Some writing about general information about the seminars.</span></p>
