--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,11 +77,11 @@ import Card from '../components/Card.astro';
     }
 
     .button {
-        background-color: #0000ffff;
+        background-color: rgba(0, 0, 255, 0);
         font-size: medium;
         cursor: pointer;
         text-align: center;
-        -webkit-text-fill-color: #0000ffff;
+        -webkit-text-fill-color: rgba(0, 0, 255, 0);
         margin: 5px;
         justify-content: space-between;
     }
