--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,8 @@ import Card from '../components/Card.astro';
     <main>
         <!-- how to set the background colour, for individual elements, use
         the same style command-->
-        <body style="background-color:rgb(0, 0, 0)"></body>
-        <h1><span class="text-gradient">Mount Stromlo Student Seminars 2023</span></h1>
+        <body style="background-color:#000000"></body>
+        <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
             <a href="#info" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a>
