--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,9 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="MSSS2023">
-    <main>
+    <main style="background-color:#000000">
         <!-- how to set the background colour, for individual elements, use
         the same style command-->
-        <body style="background-color:#000000"></body>
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
             <a href="#info" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
