--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Card from '../components/Card.astro';
         <section id="Menu">
             <a href="#info" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a>
-            <a href="./registration.html" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
+            <a href="./registration.astro" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
             <a href="#program" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
             <a href="#participants" class='button'><img src="/msss2023/participants_button.png" width="75" alt="images"></a>
         </section>
