adding all pages

--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -5,13 +5,12 @@ import Card from '../components/Card.astro';
 
 <Layout title="MSSS2023">
     <main style="background-color:#000000">
-        <!-- how to set the background colour, for individual elements, use
-        the same style command-->
+        <!-- Keep the header, and buttons the same for all pages-->
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
             <a href="#info" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
-            <!--<a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a> -->
-            <a href="msss2023/registration.astro" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
+            <a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a>
+            <a href="./registration.html" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
             <a href="#program" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
             <a href="#participants" class='button'><img src="/msss2023/participants_button.png" width="75" alt="images"></a>
         </section>
