--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,9 @@ import Card from '../components/Card.astro';
         the same style command-->
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
-            <a href="#info" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
+            <a href="/msss2023/index/" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <!--<a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a> -->
-            <a href="/msss2023/registration" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
+            <a href="/msss2023/registration/" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
             <a href="#program" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
             <a href="#participants" class='button'><img src="/msss2023/participants_button.png" width="75" alt="images"></a>
         </section>
