jump on own page to text (below logo)

--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -10,7 +10,7 @@ import Card from '../components/Card.astro';
         <section id="Menu">
             <a href="/msss2023/index/" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <!--<a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a> -->
-            <a href="/msss2023/registration/" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
+            <a href="#registration" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
             <a href="/msss2023/program/" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
             <a href="/msss2023/participants/" class='button'><img src="/msss2023/participants_button.png" width="75" alt="images"></a>
         </section>
@@ -19,7 +19,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=550ch>
+            <img src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=500ch>
 		</section>
             <section id='registration'>
                 <h2><span style="color: #A5FDF7; ">Registration</span></h2>
