--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Card from '../components/Card.astro';
         the same style command-->
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
-            <a href="/msss2023/index/" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
+            <a href="#info" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <!--<a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a> -->
             <a href="/msss2023/registration/" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
             <a href="/msss2023/program/" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
@@ -20,7 +20,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=550ch>
+            <img src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=500ch>
 		</section>
             <section id='info'>
                 <h2 style="text-align:center"><span style="color: #FDDDA5; ">Information and Key Dates</span></h2>
