jump on own page to text (below logo)

--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -8,7 +8,7 @@ import Card from '../components/Card.astro';
         <!-- Keep the header, and buttons the same for all pages-->
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
-            <a href="/msss2023/index/" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
+            <a href="/msss2023/" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <!--<a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a> -->
             <a href="#registration" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
             <a href="/msss2023/program/" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
