--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,7 @@ import Card from '../components/Card.astro';
         margin: auto;
         padding: 1.5rem;
         max-width: 100ch;
+        justify-content: center;
     }
 
     h1 {
