--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,8 +33,8 @@ import Card from '../components/Card.astro';
     main {
         margin: auto;
         padding: 1.5rem;
-        max-width: 100ch;
-        justify-content: center;
+        max-width: 200ch;
+        align-items: center;
     }
 
     h1 {
