--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -32,7 +32,8 @@ import Card from '../components/Card.astro';
     main {
         margin: auto;
         padding: 1.5rem;
-        max-width: 60ch;
+        max-width: 200ch;
+        align-items: center;
     }
 
     h1 {
