--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=500ch>
+            <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=500px>
 		</section>
             <section id='info'>
                 <h2 style="text-align:center"><span style="color: #FDDDA5; ">Information and Key Dates</span></h2>
@@ -33,7 +33,7 @@ import Card from '../components/Card.astro';
     main {
         margin: auto;
         padding: 1.5rem;
-        max-width: 60ch;
+        max-width: 500px;
         align-items: center;
     }
 
@@ -68,6 +68,12 @@ import Card from '../components/Card.astro';
         -webkit-text-fill-color: rgba(0, 0, 255, 0);
         margin: 5px;
         justify-content: space-between;
+    }
+
+    .anyofimgclass{
+        display: block;
+        max-width: 100%;
+        height: auto;
     }
 
     div {
