anyofimgclass on program

--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -68,6 +68,11 @@ import Card from '../components/Card.astro';
         margin: 5px;
         justify-content: space-between;
     }
+    .anyofimgclass{
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
 
     div {
         display: block;
