--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -23,7 +23,7 @@ import Card from '../components/Card.astro';
 		</section>
             <section id='registration'>
                 <h2><span style="color: #A5FDF7; ">Registration</span></h2>
-                <p><span style="color: #A5FDF7; ">Link and info about registering.</span></p>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUdnN8Be3sbMAUp1MvajPAtp-d51xfA_5qvKe4wtRLORfrcQ/viewform?embedded=true" width="500" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </section>
     </main>
 </Layout>
