--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,8 +31,8 @@ import Card from '../components/Card.astro';
 
 <style>
     main {
-        margin: auto;
-        padding: 0rem;
+        margin: 0;
+        padding: 1.5rem;
         max-width: vw;
         align-items: center;
     }
