--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import Card from '../components/Card.astro';
 
 <style>
     main {
-        margin: 0;
+        margin: auto;
         padding: 1.5rem;
         max-width: vw;
         align-items: center;
@@ -96,7 +96,7 @@ import Card from '../components/Card.astro';
         border: 1px solid rgba(var(--accent), 25%);
         background-color: white;
         padding: 1rem;
-        border-radius: 0.4rem;
+        border-radius: 0rem;
     }
 
     .instructions code {
