--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,7 @@ import Card from '../components/Card.astro';
 
     .anyofimgclass{
         display: block;
-        max-width: 100%;
+        max-width: vw;
         height: auto;
     }
 
@@ -104,7 +104,7 @@ import Card from '../components/Card.astro';
         font-weight: bold;
         background: rgba(var(--accent), 12%);
         color: rgb(var(--accent));
-        border-radius: 0px;
+        border-radius: 4px;
         padding: 0.3em 0.45em;
     }
 
