updating pic size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="MSSS2023">
-    <main style="background-color:#000000">
+    <main style="background-color:#000000; text-align: center">
         <!-- how to set the background colour, for individual elements, use
         the same style command-->
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
@@ -72,7 +72,7 @@ import Card from '../components/Card.astro';
 
     .anyofimgclass{
         display: block;
-        max-width: vw;
+        max-width: 100%;
         height: auto;
     }
 
