updating so all pages fill browser

--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="MSSS2023">
-    <main style="background-color:#000000">
+    <main style="background-color:#000000; text-align: center">
         <!-- Keep the header, and buttons the same for all pages-->
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
@@ -19,7 +19,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class ="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=500px>
+            <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section>
             <section id='registration'>
                 <h2><span style="color: #A5FDF7; ">Registration</span></h2>
@@ -32,7 +32,7 @@ import Card from '../components/Card.astro';
     main {
         margin: auto;
         padding: 1.5rem;
-        max-width: 500px;
+        max-width: vw;
         align-items: center;
     }
 
@@ -67,13 +67,14 @@ import Card from '../components/Card.astro';
         -webkit-text-fill-color: rgba(0, 0, 255, 0);
         margin: 5px;
         justify-content: space-between;
-        width: 10%
     }
+
     .anyofimgclass{
         display: block;
         max-width: 100%;
         height: auto;
     }
+
     div {
         display: block;
         text-align: center;
