--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="MSSS2023">
-    <main style="background-color:#000000">
+    <main style="background-color:#000000; text-align: center">
         <!-- Keep the header, and buttons the same for all pages-->
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
@@ -19,7 +19,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class ="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo" width=500p>
+            <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section>
             <section id='program'>
                 <h2><span style="color: #A5ADFD; ">Program</span></h2>
@@ -32,7 +32,7 @@ import Card from '../components/Card.astro';
     main {
         margin: auto;
         padding: 1.5rem;
-        max-width: 500px;
+        max-width: vw;
         align-items: center;
     }
 
@@ -68,6 +68,7 @@ import Card from '../components/Card.astro';
         margin: 5px;
         justify-content: space-between;
     }
+
     .anyofimgclass{
         display: block;
         max-width: 100%;
