adding current program, to update when final

--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -24,6 +24,7 @@ import Card from '../components/Card.astro';
             <section id='program'>
                 <h2><span style="color: #A5ADFD; ">Program</span></h2>
                 <p><span style="color: #A5ADFD; ">The program.</span></p>
+                <img class="anyofimgclass" src="/msss2023/program.png" alt="Program">
             </section>
     </main>
 </Layout>
