--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -74,6 +74,7 @@ import Card from '../components/Card.astro';
         display: block;
         max-width: 100%;
         height: auto;
+        align-items: center;
     }
 
     div {
