--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -21,7 +21,7 @@ import Card from '../components/Card.astro';
         <section id="logo">
             <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section>
-            <section id='program'>
+            <section id='program' style="align-content: centre;">
                 <h2><span style="color: #A5ADFD; ">Program</span></h2>
                 <p><span style="color: #A5ADFD; ">The program.</span></p>
                 <img class="anyofimgclass" src="/msss2023/program.png" alt="Program">
