--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -74,7 +74,8 @@ import Card from '../components/Card.astro';
         display: block;
         max-width: 100%;
         height: auto;
-        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     div {
