--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -26,7 +26,7 @@ import Card from '../components/Card.astro';
             <div class = "column">
                 <div class = "row">
                 <h2><span style="color: #D7A5FD; ">Name</span></h2>
-                <p><span style="color: #D7A5FD; ">Neelesh Amrutha</span></p>
+                <p><span style="color: #D7A5FD; ">Erin Holdorf</span></p>
                 <h2><span style="color: #D7A5FD; ">Institution</span></h2>
                 <p><span style="color: #D7A5FD; ">ANU</span></p>
                 </div>
@@ -83,8 +83,8 @@ import Card from '../components/Card.astro';
     }
 
     .column{
-        column-count: 2;
-        column-gap: 50px;
+        float: left;
+        width: 50%;
     }
     .row:after {
     content: "";
