--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -23,12 +23,14 @@ import Card from '../components/Card.astro';
 		</section>
             <section id='participants'>
                 <h2><span style="color: #D7A5FD; ">Participants</span></h2>
-            <div class = "column">
-                <div class = "row">
-                <h2><span style="color: #D7A5FD; ">Name</span></h2>
-                <p><span style="color: #D7A5FD; ">Erin Holdorf</span></p>
-                <h2><span style="color: #D7A5FD; ">Institution</span></h2>
-                <p><span style="color: #D7A5FD; ">ANU</span></p>
+            <div class = "row">
+                <div class = "column">
+                    <h2><span style="color: #D7A5FD; ">Name</span></h2>
+                    <p><span style="color: #D7A5FD; ">Erin Holdorf</span></p>
+                <div class = "column">
+                    <h2><span style="color: #D7A5FD; ">Institution</span></h2>
+                    <p><span style="color: #D7A5FD; ">ANU</span></p>
+                </div>
                 </div>
             </div>
             </section>
