--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -84,9 +84,9 @@ import Card from '../components/Card.astro';
         height: auto;
     }
 
-    .column{
-        width: 50%;
-    }
+    .column {
+        width:0.5vw;
+}
     .row:after {
     content: "";
     display: table;
