--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -87,10 +87,10 @@ import Card from '../components/Card.astro';
     .column {
         width:0.5vw;
 }
-    .row:after {
-    content: "";
-    display: table;
-    clear: both;
+    .row {
+        width:100%;
+        display: inline-flex;
+        flex-wrap: wrap;
     }
 
     div {
