--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -92,6 +92,9 @@ import Card from '../components/Card.astro';
         display: inline-flex;
         flex-wrap: wrap;
     }
+    .row:after {
+        clear:both;
+    }
 
     div {
         display: block;
