--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -85,7 +85,7 @@ import Card from '../components/Card.astro';
     }
 
     .column {
-        width:0.5vw;
+        width:50%;
 }
     .row {
         width:100%;
